--- a/about/about-firm-foundation.html
+++ b/about/about-firm-foundation.html
@@ -56,7 +56,7 @@
                 </a>
                 <div class="ms-auto d-flex align-items-center">
                     <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
-                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
+                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@firmfoundation-health.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+1 302-760-5510</small>
                     <div class="ms-3 d-flex">
                         <a class="btn btn-sm-square btn-light text-primary ms-2" href=""><i
@@ -141,15 +141,11 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h1 class="display-6 text-uppercase mb-4">About Firm Foundation LLC</h1>
                     <p class="mb-4">
-                        Firm Foundation, LLC, established in 2024 by Dr. Agyenim Amoako and Patience Agbeviadey, is a
-                        premier provider of integrated medical and mental health support services in Kent County,
-                        Delaware.
-                        We are committed to delivering exceptional, holistic care in a single, convenient location,
-                        ensuring
-                        seamless coordination and continuity of care. Our approach is grounded in personalized care
-                        plans
-                        tailored to each patient's unique needs, promoting overall well-being and optimal health
-                        outcomes.
+                        Firm Foundation, LLC, established in 2024 by Dr. Agyenim Amoako and Patience Agbeviadey, is a leading provider of
+                        comprehensive medical and mental health services in Kent County, Delaware. Our mission is to deliver exceptional,
+                        holistic care in a centralized location, facilitating seamless coordination and continuity of patient care. Our
+                        approach is rooted in personalized care plans designed to meet the unique needs of each patient, fostering overall
+                        well-being and achieving optimal health outcomes.
                     </p>
                     <div class="row g-5 mb-4">
                         <div class="col-sm-6">
@@ -169,21 +165,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row g-4 text-center m-3">
-                        <div class="col-4">
+                    <div class="row g-3 text-center m-3">
+                        <div class="col-4 border border-2 border-primary">
                             <h5 class="text-primary py-3">Mission</h5>
-                            <span class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis repellendus 
-                                ab quasi repellat? Excepturi quo laboriosam reiciendis tempore veniam accusamus.</span>
+                            <span class="">
+                                Our mission is to Provide and empower individuals with cost-effective, 
+                                high-quality medical and mental health services.
+                            </span>
                         </div>
-                        <div class="col-4">
+                        <div class="col-4 border border-2 border-primary">
                             <h5 class="text-primary py-3">Vision</h5>
-                            <span class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis repellendus 
-                                ab quasi repellat? Excepturi quo laboriosam reiciendis tempore veniam accusamus.</span>
+                            <span class="">Our vision is to serve patients of all ages, addressing their spiritual, physical, and emotional well-being 
+                                through a comprehensive lifestyle approach to health.</span>
                         </div>
-                        <div class="col-4">
+                        <div class="col-4 border border-2 border-primary">
                             <h5 class="text-primary py-3">Approach</h5>
-                            <span class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis repellendus 
-                                ab quasi repellat? Excepturi quo laboriosam reiciendis tempore veniam accusamus.</span>
+                            <span class="">Our holistic approach addresses interconnected health facets, 
+                                resulting in more effective and enduring outcomes.</span>
                         </div>
                     </div>
                 </div>
@@ -284,7 +282,7 @@
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
                                     <h1 class="text-white">Convenient and Accessible Services</h1>
-                                    <p class="text-white text-uppercase mb-0">
+                                    <p class="text-white mb-0">
                                         We strive to make healthcare accessible for everyone. We offer flexible scheduling, 
                                         streamlined administrative processes and a commitment to providing timely and 
                                         efficient care, so you can get the help you need without unnecessary stress or delay.
@@ -294,7 +292,7 @@
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
                                     <h1 class="text-white">Expert and Compassionate Staff</h1>
-                                    <p class="text-white text-uppercase mb-0">
+                                    <p class="text-white mb-0">
                                         Our team of healthcare professionals is highly skilled, experienced and dedicated to 
                                         providing the highest quality of care. We combine our expertise with genuine empathy, 
                                         creating a welcoming and supportive environment where you feel safe and understood.
@@ -304,7 +302,7 @@
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
                                     <h1 class="text-white">A Focus on Preventive Wellness</h1>
-                                    <p class="text-white text-uppercase mb-0">
+                                    <p class="text-white mb-0">
                                         We believe in proactive healthcare that emphasizes prevention and wellness. 
                                         Our services are designed to help you maintain optimal health, manage chronic conditions 
                                         and prevent illness before it starts.
@@ -314,7 +312,7 @@
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
                                     <h1 class="text-white">Patient-Centered Care</h1>
-                                    <p class="text-white text-uppercase mb-0">
+                                    <p class="text-white mb-0">
                                         At Firm Foundation LLC, we put you at the center of everything we do. 
                                         We listen to your concerns, respect your preferences and involve you in every step of 
                                         your care journey. Our goal is to empower you with the knowledge and support you need to 
@@ -339,7 +337,7 @@
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>766 South State Street, Dover, DE 19901</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+1 302-760-5510</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@firmfoundation-health.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-light me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-light me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -349,11 +347,11 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="#">About Us</a>
+                    <a class="btn btn-link" href="../our-contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="../our-services.html">Our Services</a>
+                    <a class="btn btn-link" href="../terms-and-conditions.html">Terms & Condition</a>
+                    <a class="btn btn-link" href="../privacy-policy.html">Privacy Policy</a>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Business Hours</h5>
