--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </a>
                 <div class="ms-auto d-flex align-items-center">
                     <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
-                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
+                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@firmfoundation-health.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+1 302-760-5510</small>
                     <div class="ms-3 d-flex">
                         <a class="btn btn-sm-square btn-light text-primary ms-2" href=""><i
@@ -113,18 +113,18 @@
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1">
-                    <img class="img-fluid" src="img/carousel/carousel-5.jpg" alt="Image">
+                    <img class="img-fluid" src="img/carousel/carousel-4.png" alt="Image">
                 </button>
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="1" aria-label="Slide 2">
                     <img class="img-fluid" src="img/carousel/carousel-6.jpg" alt="Image">
                 </button>
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="2" aria-label="Slide 3">
-                    <img class="img-fluid" src="img/carousel/carousel-3.jpg" alt="Image">
+                    <img class="img-fluid" src="img/carousel/carousel-5.jpg" alt="Image">
                 </button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel/carousel-5.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel/carousel-4.png" alt="Image">
                     <div class="carousel-caption">
                         <h1 class="display-2 text-white mb-4 animated zoomIn">
                             Firm Foundation Health & Wellness Center
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel/carousel-3.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel/carousel-5.jpg" alt="Image">
                     <div class="carousel-caption">
                         <h1 class="display-2 text-white mb-4 animated zoomIn">
                             Convenient and Accessible Services
@@ -177,15 +177,11 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h1 class="display-6 text-uppercase mb-4">About Firm Foundation LLC</h1>
                     <p class="mb-4">
-                        Firm Foundation, LLC, established in 2024 by Dr. Agyenim Amoako and Patience Agbeviadey, is a
-                        premier provider of integrated medical and mental health support services in Kent County,
-                        Delaware.
-                        We are committed to delivering exceptional, holistic care in a single, convenient location,
-                        ensuring
-                        seamless coordination and continuity of care. Our approach is grounded in personalized care
-                        plans
-                        tailored to each patient's unique needs, promoting overall well-being and optimal health
-                        outcomes.
+                        Firm Foundation, LLC, established in 2024 by Dr. Agyenim Amoako and Patience Agbeviadey, is a leading provider of
+                        comprehensive medical and mental health services in Kent County, Delaware. Our mission is to deliver exceptional,
+                        holistic care in a centralized location, facilitating seamless coordination and continuity of patient care. Our
+                        approach is rooted in personalized care plans designed to meet the unique needs of each patient, fostering overall
+                        well-being and achieving optimal health outcomes.
                     </p>
                     <div class="row g-5 mb-4">
                         <div class="col-sm-6">
@@ -208,18 +204,20 @@
                     <div class="row g-3 text-center m-3">
                         <div class="col-4 border border-2 border-primary">
                             <h5 class="text-primary py-3">Mission</h5>
-                            <span class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis repellendus 
-                                ab quasi repellat? Excepturi quo laboriosam reiciendis tempore veniam accusamus.</span>
+                            <span class="">
+                                Our mission is to Provide and empower individuals with cost-effective, 
+                                high-quality medical and mental health services.
+                            </span>
                         </div>
                         <div class="col-4 border border-2 border-primary">
                             <h5 class="text-primary py-3">Vision</h5>
-                            <span class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis repellendus 
-                                ab quasi repellat? Excepturi quo laboriosam reiciendis tempore veniam accusamus.</span>
+                            <span class="">Our vision is to serve patients of all ages, addressing their spiritual, physical, and emotional well-being 
+                                through a comprehensive lifestyle approach to health.</span>
                         </div>
                         <div class="col-4 border border-2 border-primary">
                             <h5 class="text-primary py-3">Approach</h5>
-                            <span class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis repellendus 
-                                ab quasi repellat? Excepturi quo laboriosam reiciendis tempore veniam accusamus.</span>
+                            <span class="">Our holistic approach addresses interconnected health facets, 
+                                resulting in more effective and enduring outcomes.</span>
                         </div>
                     </div>
                     <a href="about/about-firm-foundation.html" class="btn btn-primary rounded-pill py-3 px-4">Read More</a>
@@ -288,7 +286,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/health-screening.png" alt="">
+                            <img class="img-fluid w-100" src="img/services/health-screening.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Physical & Health Screening</h5>
                             </div>
@@ -433,7 +431,7 @@
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>766 South State Street, Dover, DE 19901</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+1 302-760-5510</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@firmfoundation-health.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-light me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-light me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -443,11 +441,11 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="about/about-firm-foundation.html">About Us</a>
+                    <a class="btn btn-link" href="our-contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="our-services.html">Our Services</a>
+                    <a class="btn btn-link" href="terms-and-conditions.html">Terms & Condition</a>
+                    <a class="btn btn-link" href="privacy-policy.html">Privacy Policy</a>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Business Hours</h5>
