--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Pap Smear - Firm Foundation LLC</title>
+    <meta charset="utf-8"> 
+    <title>Our Privacy Policy - Firm Foundation LLC</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="../img/logo/favicon.ico" rel="icon">
-    <link href="../img/logo/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="../img/logo/favicon-32x32.png" rel="icon" type="image/png">
-    <link href="../img/logo/favicon-16x16.png" rel="icon" type="image/png">
-    <link href="../img/logo/android-chrome-192x192.png" rel="icon" type="image/png">
-    <link href="../img/logo/android-chrome-512x512.png" rel="icon" type="image/png">
+    <link href="img/logo/favicon.ico" rel="icon">
+    <link href="img/logo/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="img/logo/favicon-32x32.png" rel="icon" type="image/png">
+    <link href="img/logo/favicon-16x16.png" rel="icon" type="image/png">
+    <link href="img/logo/android-chrome-192x192.png" rel="icon" type="image/png">
+    <link href="img/logo/android-chrome-512x512.png" rel="icon" type="image/png">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,16 +27,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 
     <!-- Libraries Stylesheet -->
-    <link href="../lib/animate/animate.min.css" rel="stylesheet">
-    <link href="../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
-
 
 <body>
     <!-- Spinner Start -->
@@ -51,8 +50,8 @@
     <div class="container-fluid bg-primary text-white d-none d-lg-flex wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-3">
             <div class="d-flex align-items-center">
-                <a href="../index.html">
-                    <img src="../img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 150px;">
+                <a href="index.html">
+                    <img src="img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 150px;">
                 </a>
                 <div class="ms-auto d-flex align-items-center">
                     <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
@@ -77,8 +76,8 @@
     <div class="container-fluid bg-white sticky-top wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
-                <a href="../index.html" class="navbar-brand d-lg-none">
-                    <img src="../img/logo/ff-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                <a href="index.html" class="navbar-brand d-lg-none">
+                    <img src="img/logo/ff-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -86,17 +85,17 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
-                        <a href="../index.html" class="nav-item nav-link">Home</a>
+                        <a href="index.html" class="nav-item nav-link">Home</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
-                                <a href="../about/about-firm-foundation.html" class="dropdown-item">Firm Foundation LLC</a>
-                                <a href="../about/our-team.html" class="dropdown-item">Our Team</a>
+                                <a href="about/about-firm-foundation.html" class="dropdown-item">Firm Foundation LLC</a>
+                                <a href="about/our-team.html" class="dropdown-item">Our Team</a>
                             </div>
                         </div>
-                        <a href="../our-services.html" class="nav-item nav-link active">Services</a>
-                        <a href="../our-membership.html" class="nav-item nav-link">Membership</a>
-                        <a href="../our-contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="our-services.html" class="nav-item nav-link">Services</a>
+                        <a href="our-membership.html" class="nav-item nav-link active">Membership</a>
+                        <a href="our-contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
                         <a href="#" class="btn btn-primary rounded-pill py-2 px-3">Book Appointment</a>
@@ -109,17 +108,16 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header pt-5 mb-6 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center pt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
                     <div class="bg-white p-5">
-                        <h1 class="display-6 text-uppercase mb-3 animated slideInDown">Pap Smear Service</h1>
+                        <h1 class="display-6 text-uppercase mb-3 animated slideInDown">Our Privacy Policy</h1>
                         <nav aria-label="breadcrumb animated slideInDown">
                             <ol class="breadcrumb justify-content-center mb-0">
-                                <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-                                <li class="breadcrumb-item"><a href="../our-services.html">Services</a></li>
-                                <li class="breadcrumb-item" aria-current="page">Pap Smear</li>
+                                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item" aria-current="page">Privacy Policy</li>
                             </ol>
                         </nav>
                     </div>
@@ -130,74 +128,49 @@
     <!-- Page Header End -->
 
 
-    <!-- Main Service Tile Start -->
-    <div class="container-fluid pt-6 pb-6 bg-grey">
-        <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h1 class="display-6 text-uppercase mb-5">Early Detection. Lifelong Protection.</h1>
-                <p class="fs-5 mb-4">
-                    At Firm Foundation LLC, we believe that preventive care is a powerful tool for 
-                    lifelong wellness. Our Pap smear screenings are designed to detect early signs of 
-                    cervical cancer and other abnormalities - giving clients the knowledge and support 
-                    they need to stay healthy and informed.
-                </p>
-                <h1>What Is a Pap Smear?</h1>
-                <p class="fs-5 mb-4">
-                    A Pap smear is a preventive screening test that involves collecting cells from the cervix to 
-                    check for abnormalities that may indicate cervical cancer or other health issues. This simple 
-                    procedure is an essential part of routine gynecological care and can help detect potential 
-                    problems early, when they are most treatable.
-                </p>
-            </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/pap-smear.png" alt="">
+    <!-- Privacy Policy Start -->
+    <div class="container-fluid pt-6 pb-6 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container text-center">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <h2 class="mb-4">Privacy Policy</h2>
+                    <p class="mb-4">
+                        At Firm Foundation LLC, we are committed to protecting your privacy. This Privacy Policy outlines how we collect, use, and safeguard your information when you visit our website or use our services.
+                    </p>
+                    <h5 class="mb-3">Information We Collect</h5>
+                    <p class="mb-4">
+                        We may collect personal information from you when you visit our site, register for an account, or use our services. This information may include your name, email address, phone number, and any other details you provide.
+                    </p>
+                    <h5 class="mb-3">How We Use Your Information</h5>
+                    <p class="mb-4">
+                        We use your information to provide and improve our services, communicate with you, and comply with legal obligations. We do not sell or rent your personal information to third parties.
+                    </p>
+                    <h5 class="mb-3">Data Security</h5>
+                    <p class="mb-4">
+                        We implement appropriate technical and organizational measures to protect your personal information from unauthorized access, use, or disclosure.
+                    </p>
+                    <h5 class="mb-3">Your Rights</h5>
+                    <p class="mb-4">
+                        You have the right to access, correct, or delete your personal information at any time. If you have any questions or concerns about our Privacy Policy, please contact us.
+                    </p>
+                    <p class="mb-0">
+                        By using our website and services, you agree to the terms of this Privacy Policy. We may update this policy from time to time, so please review it periodically.
+                    </p>
+                    <p class="mb-0">
+                        If you have any questions or concerns about our Privacy Policy, please contact us.
+                    </p>
+                    <p class="mb-0">
+                        You can reach us at <span class="text-primary">info@firmfoundation-health.com</span> or by phone 
+                        at <span class="text-primary">+1 302-760-5510</span>.
+                    </p>
                 </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <h1>What to Expect</h1>
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Private, Comfortable Environment</h5>
-                            </div>
-                            <p class="fs-5">
-                                Our team prioritizes dignity and discretion during every exam.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Gentle, Professional Care</h5>
-                            </div>
-                            <p class="fs-5">
-                                Performed by experienced providers who explain each step and answer questions.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <h5>Results & Follow-Up</h5>
-                            </div>
-                            <p class="fs-5">
-                                Timely communication of results and guidance on next steps if needed.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text-center mx-auto wow fadeInUp pt-5" data-wow-delay="0.5s" style="max-width: 600px;">
-                <h1>Why It Matters</h1>
-                <p class="fs-5 mb-4">
-                    Cervical cancer is highly treatable when caught early. Regular Pap smears can detect changes 
-                    before symptoms appear - making early intervention possible and empowering clients 
-                    to take charge of their health.
-                </p>
-                <a class="btn btn-primary" href="#">Schedule A Session</a>
             </div>
         </div>
     </div>
-    <!-- Main Service Tile End -->
+    <!-- Privacy Policy End -->
 
 
-     <!-- Footer Start -->
+    <!-- Footer Start -->
     <div class="container-fluid bg-dark footer py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
@@ -215,11 +188,11 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="../about/about-firm-foundation.html">About Us</a>
-                    <a class="btn btn-link" href="../our-contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="../our-services.html">Our Services</a>
-                    <a class="btn btn-link" href="../terms-and-conditions.html">Terms & Condition</a>
-                    <a class="btn btn-link" href="../privacy-policy.html">Privacy Policy</a>
+                    <a class="btn btn-link" href="about/about-firm-foundation.html">About Us</a>
+                    <a class="btn btn-link" href="our-contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="our-services.html">Our Services</a>
+                    <a class="btn btn-link" href="terms-and-conditions.html">Terms & Condition</a>
+                    <a class="btn btn-link" href="#">Privacy Policy</a>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Business Hours</h5>
@@ -254,20 +227,21 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i
+            class="bi bi-arrow-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../lib/wow/wow.min.js"></script>
-    <script src="../lib/easing/easing.min.js"></script>
-    <script src="../lib/waypoints/waypoints.min.js"></script>
-    <script src="../lib/counterup/counterup.min.js"></script>
-    <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/counterup/counterup.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="../js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
