--- a/services/asthma-management.html
+++ b/services/asthma-management.html
@@ -56,7 +56,7 @@
                 </a>
                 <div class="ms-auto d-flex align-items-center">
                     <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
-                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
+                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@firmfoundation-health.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+1 302-760-5510</small>
                     <div class="ms-3 d-flex">
                         <a class="btn btn-sm-square btn-light text-primary ms-2" href=""><i
@@ -260,7 +260,7 @@
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>766 South State Street, Dover, DE 19901</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+1 302-760-5510</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@firmfoundation-health.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-light me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-light me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -270,11 +270,11 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="../about/about-firm-foundation.html">About Us</a>
+                    <a class="btn btn-link" href="../our-contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="../our-services.html">Our Services</a>
+                    <a class="btn btn-link" href="../terms-and-conditions.html">Terms & Condition</a>
+                    <a class="btn btn-link" href="../privacy-policy.html">Privacy Policy</a>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Business Hours</h5>
@@ -285,29 +285,6 @@
                     <p class="text-uppercase mb-0">Sunday</p>
                     <p>Closed</p>
                 </div>
-                <!-- <div class="col-lg-3 col-md-6">
-                    <h5 class="text-uppercase text-light mb-4">Certs</h5>
-                    <div class="row g-1">
-                        <div class="col-4">
-                            <img class="img-fluid" src="img/service-1.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid" src="img/service-2.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid" src="img/service-3.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid" src="img/service-4.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid" src="img/service-5.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid" src="img/service-6.jpg" alt="">
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
