--- a/about/our-team.html
+++ b/about/our-team.html
@@ -56,7 +56,7 @@
                 </a>
                 <div class="ms-auto d-flex align-items-center">
                     <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
-                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
+                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@firmfoundation-health.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+1 302-760-5510</small>
                     <div class="ms-3 d-flex">
                         <a class="btn btn-sm-square btn-light text-primary ms-2" href=""><i
@@ -90,8 +90,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
-                                <a href="#" class="dropdown-item">Firm Foundation LLC</a>
-                                <a href="our-team.html" class="dropdown-item">Our Team</a>
+                                <a href="about-firm-foundation.html" class="dropdown-item">Firm Foundation LLC</a>
+                                <a href="#" class="dropdown-item">Our Team</a>
                             </div>
                         </div>
                         <a href="../our-services.html" class="nav-item nav-link">Services</a>
@@ -145,14 +145,16 @@
                             <h5 class="mb-1">Dr. Agyenim Amoako</h5>
                             <span>Co-Founder / MD, FAAFP</span><br>
                         </div>
-                        <div class="text-center p-4">
+                        <div class="text-center p-4 bg-grey">
                             <details>
                                 <summary class="btn btn-primary mb-3">Read Profile</summary>
                                 <p>
                                    Dr. Amoako, a highly skilled physician, possesses a background in Biology and Chemistry from 
                                    Delaware State University and a medical degree from Ross University School of Medicine. With 
                                    over a decade of practical experience in primary and occupational healthcare, Dr. Amoako 
-                                   completed his Family Medicine Residency at the University of Arkansas for Medical Sciences. 
+                                   completed his Family Medicine Residency at the University of Arkansas for Medical Sciences(UAMS).
+                                    During his tenure at UAMS, Dr. Amoako served as chief resident, acquiring valuable knowledge 
+                                    in leadership, communication, and clinical skills/practice. 
                                    Subsequently, he has dedicated the past decade to serving as a primary care and occupational 
                                    medicine provider at Mountaire Health and Wellness Center, a facility owned by Mountaire Delmarva 
                                    Chicken Farms
@@ -191,7 +193,7 @@
                             <h5 class="mb-1">Patience Agbeviadey</h5>
                             <span>Co-Founder / Licensed Clinical Social Worker</span><br>
                         </div>
-                        <div class="text-center p-4">
+                        <div class="text-center p-4 bg-grey">
                             <details>
                                 <summary class="btn btn-primary mb-3">Read Profile</summary>
                                 <p>
@@ -247,7 +249,7 @@
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>766 South State Street, Dover, DE 19901</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+1 302-760-5510</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@firmfoundation-health.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-light me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-light me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -257,11 +259,11 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="about-firm-foundation.html">About Us</a>
+                    <a class="btn btn-link" href="../our-contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="../our-services.html">Our Services</a>
+                    <a class="btn btn-link" href="../terms-and-conditions.html">Terms & Condition</a>
+                    <a class="btn btn-link" href="../privacy-policy.html">Privacy Policy</a>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Business Hours</h5>
