--- a/services/sports-physicals.html
+++ b/services/sports-physicals.html
@@ -56,7 +56,7 @@
                 </a>
                 <div class="ms-auto d-flex align-items-center">
                     <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
-                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
+                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@firmfoundation-health.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+1 302-760-5510</small>
                     <div class="ms-3 d-flex">
                         <a class="btn btn-sm-square btn-light text-primary ms-2" href=""><i
@@ -158,27 +158,27 @@
                         <div class="row g-4 pt-2 mb-4">
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
-                                    <p class="text-white text-uppercase mb-0">Review of medical history and current health status.</p>
+                                    <p class="text-white mb-0">Review of medical history and current health status.</p>
                                 </div>
                             </div>
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
-                                    <p class="text-white text-uppercase mb-0">Height, weight, vision and vital signs check.</p>
+                                    <p class="text-white mb-0">Height, weight, vision and vital signs check.</p>
                                 </div>
                             </div>
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
-                                    <p class="text-white text-uppercase mb-0">Musculoskeletal and cardiovascular screening.</p>
+                                    <p class="text-white mb-0">Musculoskeletal and cardiovascular screening.</p>
                                 </div>
                             </div>
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
-                                    <p class="text-white text-uppercase mb-0">Immunization review and updates (if needed).</p>
+                                    <p class="text-white mb-0">Immunization review and updates (if needed).</p>
                                 </div>
                             </div>
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
-                                    <p class="text-white text-uppercase mb-0">Completion of required school or sports forms.</p>
+                                    <p class="text-white mb-0">Completion of required school or sports forms.</p>
                                 </div>
                             </div>
                         </div>
@@ -223,7 +223,7 @@
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>766 South State Street, Dover, DE 19901</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+1 302-760-5510</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@firmfoundation-health.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-light me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-light me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -233,11 +233,11 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="../about/about-firm-foundation.html">About Us</a>
+                    <a class="btn btn-link" href="../our-contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="../our-services.html">Our Services</a>
+                    <a class="btn btn-link" href="../terms-and-conditions.html">Terms & Condition</a>
+                    <a class="btn btn-link" href="../privacy-policy.html">Privacy Policy</a>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Business Hours</h5>
